# trial_project

./: .gitignore  CMakeLists.txt  README.md  Scrambler.cc  Scrambler.h  _nrzm.c  _rs_decode.c  cadu_solve.cpp  cadu_solve.sln  cadu_solve.vcxproj  cadu_solve.vcxproj.filters  common_types.h  getopt.h  init_rs.c  socket_comm.c  socket_comm.h  splash.h  unistd_win.h  utils.c  utils.h
.claude/: settings.local.json
ccsds/: _bch.c  _check_rs.c  _conv.c  _psr.c  _rs_decode.c
ccsds/conv/: cpu_mode_ppc.c  fec.c  viterbi27.c  viterbi27_port.c
ccsds/rs/: char.h  decode_rs.h  decode_rs_char.c  init_rs.h
rs/: fec.h  init_rs_char.c  rs-common.h
